SecureCryptoX/SecureCryptoX-Terraform/security_group.tf
resource "aws_security_group" "alb_sg" {
  name        = "SecureCryptoX-ALB-SG"
  description = "ALB Security Group"
  vpc_id      = aws_vpc.securecryptox_vpc.id

  ingress {
    from_port   = 80
    to_port     = 80
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  egress {
    from_port   = 0
    to_port     = 0
    protocol    = "-1"
    cidr_blocks = ["0.0.0.0/0"]
  }
}

resource "aws_security_group" "ec2_sg" {
  name        = "SecureCryptoX-EC2-SG"
  description = "EC2 Security Group"
  vpc_id      = aws_vpc.securecryptox_vpc.id

  ingress {
    from_port       = 5000
    to_port         = 5000
    protocol        = "tcp"
    security_groups = [aws_security_group.alb_sg.id]
  }

  ingress {
    from_port   = 22
    to_port     = 22
    protocol    = "tcp"
    cidr_blocks = ["42.191.208.225/32"]
  }

  egress {
    from_port   = 0
    to_port     = 0
    protocol    = "-1"
    cidr_blocks = ["0.0.0.0/0"]
  }
}
